Fix z-index for mobile-featured-actions-button
[3.1]

ERM#17077

Please cherry-pick to master.

--- a/resources/stylesheets/component/common/mobile-featured-actions-button.less
+++ b/resources/stylesheets/component/common/mobile-featured-actions-button.less
@@ -3,7 +3,7 @@
 	position: fixed;
 	right: 2.5vw;
 	bottom: 2.5vw;
-	z-index: 15;
+	z-index: 11;
 
 	& > i {
 		height: 48px;
